<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sign_up_activity">

    <TextView
        android:id="@+id/create_an_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/create_an_account_heading"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/Email_2"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/create_an_account"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"
        android:hint="@string/Email" />

    <EditText
        android:id="@+id/Password_2"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/Email_2"
        android:inputType="textPassword"
        android:hint="@string/Password" />

    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_centerHorizontal="true"
        android:onClick="go_back_to_sign_in"
        android:layout_below="@id/Password_2" />

</RelativeLayout>