<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".list_activity">

    <Button
        android:id="@+id/button_log_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:layout_centerHorizontal="true"
        android:onClick="on_sign_out"/>

    <EditText
        android:id="@+id/new_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_log_out"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@id/insert"
        android:layout_toStartOf="@id/insert"
        android:hint="@string/unposted_comment"
        android:maxLines="0"
        android:inputType="text" />

    <Button
        android:id="@+id/insert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_log_out"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/insert"
        android:onClick="on_insert"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/new_item"/>

</RelativeLayout>